--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -94,3 +94,47 @@ a[href="https://github.com/tkwest2014/semantic-elements"]{
 .fa-facebook{
   color: blue;
 }
+
+button, input, select, textarea{
+  font-family: inherit;
+  font-size: 100%;
+  box-sizing: border-box;
+  display: block;
+  margin: 2rem;
+}
+
+input[type=submit]{
+  width: 50%;
+  background-color: lightgray;
+}
+
+input{
+  border-radius: 10rem;
+}
+
+fieldset input{
+  display: inline;
+}
+
+.checkbox input{
+  position: absolute;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+
+.checkbox label{
+  padding-left: 7rem;
+}
+
+.checkmark {
+  position: absolute;
+  background-color: white;
+  height: 1rem;
+  width: 1rem;
+  margin-left: 1rem;
+}
+
+.checkbox input:checked ~ .checkmark  {
+  background-color: darkgray;
+}
